# signposting

./: .bumpversion.cfg  .gitignore  .readthedocs.yml  Makefile  pyproject.toml  tox.ini
.github/workflows/: ci-testing.yml  lint.yml  pr.yml  version-bump-and-package.yml
src/signposting/: __init__.py  __main__.py  cli.py  htmllinks.py  linkheader.py  linkset.py  resolver.py  signpost.py
tests/: test_cli.py  test_htmllinks.py  test_linkheader.py  test_linkset.py  test_resolver.py  test_signpost.py
tests/data/a2afairmetrics/: __init__.py
