[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signposting"
description = "Parse and navigate FAIR Signposting Link headers."
version = "0.9.2"
requires-python = ">=3.7"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "Stian Soiland-Reyes", email = "stain@apache.org" },
]
maintainers = [
    { name = "Stian Soiland-Reyes", email = "stain@apache.org" },
]
keywords = [
    "FAIR", "signposting", "linked data", "DOI", "HTTP", "linkset"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "beautifulsoup4 >=4.10",
    "httplink ==0.2.0",
    "rfc3987 >=1.3.8",
    "requests >=2.28.1",
]


[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "coverage[toml]",
    "hypothesis ",
    "tox",
    "mypy",

    "types-requests >=2.28.1",
    "types-beautifulsoup4 >=4.10",
    "requests-mock >=1.9.3",
]
docs = [
    "sphinx >=2.2",
    "sphinx-py3doc-enhanced-theme",
    "sphinx-argparse",
    "CommonMark",
    "mock",
]


[project.scripts]
signposting = "signposting.cli:main"


[project.urls]
Homepage = "https://github.com/stain/signposting"
Documentation = "https://signposting.readthedocs.io/en/latest/"
Changelog = "https://github.com/stain/signposting/blob/main/docs/CHANGELOG.rst"
Tracker = "https://github.com/stain/signposting/issues"
Source = "https://github.com/stain/signposting"
Discussion = "https://github.com/stain/signposting/discussions"


# ENVIRONMENTS AND SCRIPTS
[tool.hatch.envs.default]
features = [
    "test",
    "docs",
]

[tool.hatch.envs.default.scripts]
test = [
    "tox {args}",
]
cov = [
    "tox {args}",
    "python -c 'import webbrowser; webbrowser.open(\"http://0.0.0.0:3000\")'",
    "python -m http.server 3000 --directory ./htmlcov",
]


# TOOLS

[tool.hatch.build]
sources = ["src"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
source = ["signposting"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
precision = 2
omit = ["*migrations*"]
exclude_lines = ["if __name__ == .__main__.:"]


[tool.mypy]
no_implicit_optional = false


# # https://github.com/charliermarsh/ruff#supported-rules
# [tool.ruff]
# src = ["src", "tests"]
# target-version = "py38"
# line-length = 120
# select = [
#     "A",
#     "B",   # flake8-bugbear
#     "C",   # flake8-comprehensions
#     "E",   # pycodestyle errors
#     "F",   # pyflakes
#     # "FBT", # flake8-boolean-trap
#     "I",   # isort
#     "ICN",
#     "N",
#     "PLC",
#     "PLE",
#     "PLR",
#     "PLW",
#     "Q",
#     "RUF",
#     "S",
#     "SIM",
#     "T",
#     "TID",
#     "UP",
#     "W",  # pycodestyle warnings
#     "YTT",
# ]
# ignore = [
#     "E501", # line too long
#     "B008", # do not perform function calls in argument defaults
#     "B006", # do not use mutable data structures for argument defaults
#     "C901", # too complex
#     "S101", # Use of `assert` detected
#     "T201", "T203", # remove print and pprint
#     "S105", # Potential password
#     "PLR0913", "PLR0912", "PLR0915", # Too many branches/statements/arguments to function call
#     "A002", "A003", # Argument/Class attribute `type` is shadowing a Python builtin
# ]

# [tool.ruff.per-file-ignores]
# "__init__.py" = ["I", "F401"] # module imported but unused
